--- a/index.html
+++ b/index.html
@@ -46,5 +46,5 @@
 		<link rel="icon" type="image/png" href="assets/img/favicon.png">
 		
 		<!-- Title -->
-		<title></title>
+		<title>footer branch</title>
     </head>
